force-app/main/default/objects/Weather__c/Weather__c.object-meta.xml
<CustomObject>
    <label>Weather</label>
    <nameField>
        <displayFormat>WE# {YYYY}{MM}-{0}</displayFormat>
        <label>Weather Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weather Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>