force-app/main/default/objects/Weather__c/fields/Date_Collected__c.field-meta.xml
<CustomField>
    <fullName>Date_Collected__c</fullName>
    <label>Date Collected</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>