force-app/main/default/objects/Weather__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <description>Temperature in celsius</description>
    <label>Temperature</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>