force-app/main/default/objects/Weather__c/fields/UV__c.field-meta.xml
<CustomField>
    <fullName>UV__c</fullName>
    <label>UV</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>