force-app/main/default/objects/Weather__c/fields/Wind_Degree__c.field-meta.xml
<CustomField>
    <fullName>Wind_Degree__c</fullName>
    <label>Wind Degree</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>