force-app/main/default/objects/Weather__c/fields/Wind_Direction__c.field-meta.xml
<CustomField>
    <fullName>Wind_Direction__c</fullName>
    <label>Wind Direction</label>
    <length>3</length>
    <type>Text</type>
</CustomField>